[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/DebugPanel.gd" type="Script" id=1]

[node name="DebugPanel" type="Control"]
margin_left = -60.0
margin_right = 60.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
